# cupt

./: .gitignore  CMakeLists.txt  Makefile.PL  NEWS  advantages_over_apt  cupt  differences_over_apt  getpot
Cupt/: Cache.pm  Config.pm  Core.pm  Graph.pm  ISCConfigParser.pm  LValueFields.pm  SystemState.pm
Cupt/Cache/: ArchitecturedRelation.pm  BinaryVersion.pm  Package.pm  Pkg.pm  Relation.pm  SourceVersion.pm
Cupt/Config/: ISCConfigParser.pm
Cupt/Download/: DebdeltaHelper.pm  Downloader.pm  Manager.pm  Method.pm  Progress.pm
Cupt/Download/Methods/: Curl.pm  Debdelta.pm  File.pm
Cupt/Download/Progresses/: Console.pm
Cupt/Graph/: TransitiveClosure.pm
Cupt/System/: Resolver.pm  Snapshots.pm  State.pm  Worker.pm
Cupt/System/Resolvers/: External.pm  Native.pm
Cupt/System/Worker/: Lock.pm
cpp/: CMakeLists.txt  flags.cmake  version.cmake  version.hpp.in
cpp/common/: common.hpp  format2.hpp  regex.hpp
cpp/console/: CMakeLists.txt  colorizer.cpp  colorizer.hpp  common.cpp  common.hpp  cupt.cpp  cupt.hpp  functionselectors.cpp  functionselectors.hpp  handlers.hpp  misc.cpp  misc.hpp  selectors.cpp  selectors.hpp
cpp/console/handlers/: download.cpp  managepackages.cpp  misc.cpp  search.cpp  shell.cpp  snapshot.cpp  why.cpp
cpp/downloadmethods/: CMakeLists.txt  curl.cpp  debdelta.cpp  file.cpp  wget.cpp
cpp/lib/: CMakeLists.txt
cpp/lib/include/cupt/: cache.hpp  common.hpp  config.hpp  file.hpp  format2.hpp  fwd.hpp  hashsums.hpp  packageid.hpp  packagename.hpp  pipe.hpp  range.hpp  regex.hpp  stringrange.hpp  versionstring.hpp
cpp/lib/include/cupt/cache/: binarypackage.hpp  binaryversion.hpp  package.hpp  relation.hpp  releaseinfo.hpp  sourcepackage.hpp  sourceversion.hpp  version.hpp
cpp/lib/include/cupt/download/: manager.hpp  method.hpp  methodfactory.hpp  progress.hpp  uri.hpp
cpp/lib/include/cupt/download/progresses/: console.hpp
cpp/lib/include/cupt/system/: resolver.hpp  snapshots.hpp  state.hpp  worker.hpp
cpp/lib/include/cupt/system/resolvers/: native.hpp
cpp/lib/src/: cache.cpp  common.cpp  config.cpp  file.cpp  hashsums.cpp  packageid.cpp  pipe.cpp  regex.cpp  versionstring.cpp
cpp/lib/src/cache/: binarypackage.cpp  binaryversion.cpp  package.cpp  relation.cpp  sourcepackage.cpp  sourceversion.cpp  version.cpp
cpp/lib/src/common/: compareversions.cpp  consumers.cpp
cpp/lib/src/download/: manager.cpp  method.cpp  methodfactory.cpp  progress.cpp  uri.cpp
cpp/lib/src/download/progresses/: console.cpp
cpp/lib/src/internal/: basepackageiterator.cpp  cachefiles.cpp  cachefiles.hpp  cacheimpl.cpp  cacheimpl.hpp  common.cpp  common.hpp  configparser.cpp  configparser.hpp  copyptr.hpp  debdeltahelper.cpp  debdeltahelper.hpp  exceptionlessfuture.hpp  filesystem.cpp  filesystem.hpp  graph.hpp  horspoolsearcher.cpp  horspoolsearcher.hpp  indexofindex.cpp  indexofindex.hpp  lock.cpp  lock.hpp  logger.cpp  logger.hpp  nativeresolverimpl.cpp  nativeresolverimpl.hpp  parse.hpp  parse.tpp  pininfo.cpp  pininfo.hpp  pipe.cpp  pipe.hpp  regex.cpp  regex.hpp  solution.cpp  solution.hpp  tagparsemacro.hpp  tagparser.cpp  tagparser.hpp  versionparse.cpp  (+2 more)
cpp/lib/src/internal/nativeresolver/: autoremoval.cpp  autoremoval.hpp  autoremovalpossibility.cpp  autoremovalpossibility.hpp  cowmap.hpp  cowmap.tpp  decisionfailtree.cpp  decisionfailtree.hpp  dependencygraph.cpp  dependencygraph.hpp  impl.cpp  impl.hpp  score.cpp  score.hpp  solution.cpp  solution.hpp
cpp/lib/src/internal/worker/: archives.cpp  archives.hpp  base.cpp  base.hpp  dpkg.cpp  dpkg.hpp  metadata.cpp  metadata.hpp  packages.cpp  packages.hpp  setupandpreview.cpp  setupandpreview.hpp  snapshots.cpp  snapshots.hpp  temppath.cpp  temppath.hpp
cpp/lib/src/system/: resolver.cpp  snapshots.cpp  state.cpp  worker.cpp
cpp/lib/src/system/resolvers/: native.cpp
cpp/platform-tests/: std-function-lambda-capture.cpp
cpp/precompiled/: CMakeLists.txt  precompiled.hpp
debian/: .gitignore  NEWS  changelog  control  copyright  cupt-experimental.install  cupt.bash-completion  cupt.dirs  cupt.docs  cupt.install  cupt.lintian-overrides  cupt.manpages  install_pods  libcupt-perl.dirs  libcupt-perl.docs  libcupt-perl.install  libcupt-perl.postinst  libcupt-perl.prerm  libcupt.postinst  libcupt2-0-downloadmethod-curl.install  libcupt2-0-downloadmethod-wget.install  libcupt2-0-experimental.postinst  libcupt2-0-experimental.postrm  libcupt2-0.dirs  libcupt2-0.install  libcupt2-0.postrm  libcupt2-0.shlibs  libcupt2-dev.install  libcupt2-doc-experimental.install  libcupt2-doc.install  libcupt3-0-downloadmethod-curl.install  libcupt3-0-downloadmethod-wget.install  libcupt3-0.dirs  libcupt3-0.install  libcupt3-0.postrm  libcupt3-0.shlibs  libcupt3-dev.install  libcupt3-doc.install  libcupt4-0-downloadmethod-curl.install  libcupt4-0-downloadmethod-wget.install  (+17 more)
doc/: .gitignore  CMakeLists.txt  ChangeLog  NEWS  TODO  advantages_over_apt  cupt-experimental.1.pod  cupt-experimental_howto.7.pod  cupt-experimental_vs_apt.5.pod  cupt-howto.7.pod  cupt.1.pod  cupt.1.t2t  cupt.conf.5.pod  cupt.pod  cupt_howto.7.pod  cupt_vs_apt.5.pod  differences_over_apt  functionalselectors.t2t  roadmap  tutorial.t2t
doc/examples/: CMakeLists.txt
doc/examples/show-available/: CMakeLists.txt  show-available.cpp
doc/examples/show-updateable/: Makefile
doc/examples/show-upgradeable/: CMakeLists.txt  Makefile  show-upgradeable.cpp
doc/reference/: .gitignore  Doxyfile
po/: CMakeLists.txt  da.po  de.po  fr.po  getpot  pl.po  sk.po
scripts/: bash_completion  logrotate  run_coverage.sh
t/: compare_hash_sums.t  file_method.t  get_proxy_for_uri.t  is_version_string_native.t  search.t  version_string.t  without_arguments.t
test/: CMakeLists.txt  CuptInteractive.pm  TestCupt.pm  run.sh
test/fakes/: dpkg-repack  dpkg-scanpackages  dpkg-source
test/gpg/: expired.gpg  mock1k-revoke.gpg  mock1k.gpg  mock4k.gpg  secrets.asc
test/t/: help.t  version.t
test/t/manage/: autoremoval.t  common-hidden-dependency-problem.t  conflicts.t  depending-on-many-packages.t  depending-on-more-usual-packages-dont-give-more-score.t  (+5 more)
(+229 files in other folders)
